Fix Well-Background (so the Text is readable)

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -7,6 +7,7 @@
 
 @link-color:            #FFFF99;
 @panel-bg:              #222222;
+@well-bg:               @panel-bg;
 @panel-primary-border:  #FFFFFF;
 
 @navbar-default-link-color: #FFFFFF;
